<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fbutton="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.com490.expiredteam.expired.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/StringInputs"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:textSize="32sp"
        android:textColor="@android:color/black"/>

    <info.hoang8f.widget.FButton

        fbutton:fButtonColor="@color/manual_input_bg"
        android:text="@string/ManualInputs"
        fbutton:shadowEnabled="false"
        fbutton:cornerRadius="8dp"
        android:layout_centerInParent="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:onClick="OnButtonClick"
        android:id="@+id/manualButton"/>


    <LinearLayout
        android:id="@+id/recent_items_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:paddingTop="21dp"
        android:paddingBottom="21dp"
        android:background="@color/recent_items_bg">

        <TextView
            android:id="@+id/all_items"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/all_item"
            android:textSize="24sp"
            android:textColor="@android:color/black"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recent_items"
        android:textSize="32sp"
        android:layout_centerHorizontal="true"
        android:layout_above="@id/recent_items_container"
        android:textColor="@android:color/black"/>

</RelativeLayout>
